--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "firefox",
+            "request": "launch",
+            "reAttach": true,
+            "name": "Launch firefox",
+            "file": "${workspaceFolder}/index.html"
+        },
+
+        {
             "type": "chrome",
             "request": "launch",
             "preLaunchTask": "Deploy to server",
